# Ralph-Workflow

./: .gitignore  .gitmodules  .mcp.json  .pyrightconfig.json  .woodpecker.yml  1flow  ACTIVITY_THEATER.md  AGENTS.md  BLOCKER_ROI_SUMMARY.md  CLA.md  CLAUDE.md  CODE_STYLE.md  COMPARISONS.md  CONTENT_SATURATION_ACTIVE.md  CONTRIBUTING.md  CREDIT_TEMPLATE.md  Cargo.toml  DOCS_PROCESS.md  ECOSYSTEM.md  IDENTITY.md  MEMORY.md  MONETIZATION.md  Makefile  Makefile.tmp  README.md  README.zh.md  REVENUE_LOOP.md  SHOWCASE.md  SOUL.md  START_HERE.md  START_HERE_RALPHWORKFLOW.md  SYSTEM_STATUS.md  TOOLS.md  USER.md  USERS.md  _cross_link_starthere.py  clippy.toml  docker-compose.yml  docs-audit-result.json  fix_seo.py  (+42 more)
example-api/: README.md  pyproject.toml
example-api/tests/: test_health.py
lints/ralph_lints/: Cargo.toml  rustc-nightly
mcp-server/: Cargo.toml  README.md
mcp-server/src/: lib.rs  main.rs
mcp-server/tests/: access_control.rs  dispatch_capability.rs  heartbeat_monitor.rs  protocol_framing.rs  session_lifecycle.rs  standalone_binary.rs  standalone_full_stack.rs  standalone_host.rs  standalone_integration.rs
ralph-gui/: .gitignore  Cargo.toml  build.rs  cargo  clippy.toml  tauri.conf.json
ralph-gui/capabilities/: default.json
ralph-gui/docs/: glossary.md  index.md
ralph-gui/src/: lib.rs  main.rs  state.rs
ralph-gui/ui/: angular.json  bunfig.toml  eslint.config.mjs  head  index.html  package-lock.json  package.json  playwright.config.ts  tail  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.spec.json  vite.config.ts  vitest.global-setup.ts
ralph-python/: .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml  ruff_current.json
ralph-python/Formula/: ralph-workflow.rb
ralph-python/docs/: mcp-tool-restriction.md
ralph-python/ralph/: __init__.py  __main__.py  banner.py  install.py  logging.py  verify_timeout.py
ralph-python/tests/: __init__.py  conftest.py  test_agent_chain.py  test_agent_executor_protocol.py  test_agent_registry.py  test_agents_invoke.py  test_api_opencode.py  test_asyncio_bridge.py  test_audit_adapter.py  test_banner.py  test_checkpoint.py  test_checkpoint_async.py  test_checkpoint_builder.py  test_checkpoint_cleanup.py  test_checkpoint_parallel.py  test_checkpoint_run_context.py  test_checkpoint_size_monitor.py  test_cli.py  test_cli_cleanup.py  test_cli_commands.py  test_cli_commands_run.py  test_cli_commit_command.py  test_cloud_client.py  test_commit_message.py  test_config_loader.py  test_config_propagation.py  test_dashboard_renderer.py  test_development_result_artifact.py  test_display_phase_banner.py  test_display_sigwinch.py  test_display_tables.py  test_effects_parallel.py  test_entrypoints.py  test_executor_process.py  test_exit_pause.py  test_fake_agent_executor.py  test_files_operations.py  test_git_executor.py  test_git_hooks.py  test_git_operations.py  (+82 more)
ralph-workflow/: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  Makefile.restore  Makefile.restored  PROMPT.md  README.md  START_HERE.md  checkpoint.json  clippy.toml  debug_import.py  delete_shims.py  fix.mk  fix_imports.py  fix_merge_conflict_test.py  fix_pipeline_runner.py  fix_runner.py  fix_test.py  fixlint.mk  mypy.ini  mypy_current.txt  pyproject.toml  pytest.ini  run_verify_internal.sh  test_import.py  test_import2.py  tmp_check_recovery.py  tmp_check_rollback.py  tmp_check_runner.py  tmp_fix_e501.py  tmp_fix_e501_cli.py  tmp_fix_e501_runner.py  tmp_fix_fake_handle.py  tmp_fix_mocks.py  tmp_fix_ruf001.py  (+4 more)
ralph-workflow-policy/: Cargo.toml  artifacts.toml  pipeline.toml
ralph-workflow-policy/phases/: development.toml  development_commit.toml  planning.toml  review.toml  review_commit.toml
ralph-workflow-policy/src/: lib.rs  templates.rs
ralph-workflow-policy/templates/: parallel_verifier.txt
ralph-workflow/.ralph/: run.json
ralph-workflow/Formula/: ralph-workflow.rb
ralph-workflow/docs/: README.md  after-your-first-run.md  ai-agent-orchestration-cli.md  claude-code-approval-mode.md  claude-code-automation.md  first-task-guide.md  first-task-prompt-templates.md  mcp-tool-restriction.md  ralph-workflow-vs-opencode.md  reviewable-output.md  spec-driven-ai-agent.md  unattended-coding-agent.md
ralph-workflow/examples/: agents.toml  ralph-workflow.toml
ralph-workflow/ralph/: __init__.py  _logging_config.py  _logging_paths.py  _rich_group_proto.py  _rich_panel_proto.py  _session_runtime_deps.py  _session_runtime_request.py  _session_runtime_runtime.py  _supervising_tracker.py  banner.py  install.py  instance_status.py  logging.py  logging_models.py  logging_worker_sink.py  onboarding.py  project_urls.py  pydantic_compat.py  pydantic_validation_errors.py  rich_protocols.py  session_runtime.py  supervising.py  test_suites.py  timeout_defaults.py  verify.py  verify_timeout.py
ralph-workflow/readability/: __init__.pyi
ralph-workflow/schemas/: commit_message.schema.json  development_result.schema.json  fix_result.schema.json  issues.schema.json  plan.schema.json
ralph-workflow/scripts/: wt028-drift-check.sh
ralph-workflow/skills-package/: package.json  upstream-skills.json
ralph-workflow/src/: banner.rs  config_loading.rs  exit_pause.rs  lib.rs  main.rs  mcp_session_bridge_http.rs  workspace.rs
ralph-workflow/stubs/: tqdm.pyi
ralph-workflow/tests/: _artifact_submit_session.py  _artifact_workspace.py  _diagnostics_git_probe.py  _fake_pty_handle.py  _pipeline_deps_factory.py  _prepare_executor_fake_mcp_server_factory.py  _prepare_session_contract.py  _rollback_drain_session.py  _rollback_session.py  _rollback_workspace.py  _session_fake_mcp_bridge.py  _session_registry_factory.py  _session_registry_instance.py  _worker_artifact_fake_mcp_server_factory.py  artifact_submit_session.py  conftest.py  coordination_mock_capable_session.py  coordination_mock_session.py  coordination_mock_workspace.py  doc_roots.py  fake_handle.py  mock_session.py  mock_session_with_manifest.py  (+1191 more)
tests/: Cargo.toml  INTEGRATION_TESTS.md  clippy.toml
(+8254 files in other folders)
