[workspace]
members = ["mcp-server", "ralph-workflow", "test-helpers", "tests", "xtask", "ralph-gui"]
default-members = ["mcp-server", "ralph-workflow", "test-helpers", "xtask"]
resolver = "2"

[workspace.metadata.test-workspace]
# Integration tests are in a separate workspace
test-members = ["tests"]

[workspace.metadata.dylint]
libraries = [
    { path = "lints/ralph_lints" },
]

[workspace.dependencies]
# Shared dependencies for all workspace members
git2 = "0.18"
tempfile = "3.10"
tauri = { version = "2" }
tauri-build = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
specta = { version = "2.0.0-rc", features = ["serde", "chrono"] }
specta-typescript = "0.0.7"
tauri-specta = { version = "2.0.0-rc", features = ["typescript"] }
frunk = "0.4.4"

[profile.release]
opt-level = 3
lto = true
strip = true
