[package]
name = "ralph-gui"
version = "0.1.0"
edition = "2021"
description = "Desktop GUI for Ralph Workflow orchestrator"
authors = ["Mistlight"]
license = "AGPL-3.0-only"
exclude = ["ui/node_modules/**", "ui/dist/**"]

[lib]
name = "ralph_gui"
path = "src/lib.rs"

[[bin]]
name = "ralph-gui"
path = "src/main.rs"

[[bin]]
name = "e2e-server"
path = "src/bin/e2e_server.rs"
required-features = ["e2e-server"]

[build-dependencies]
tauri-build = { workspace = true }
specta = { workspace = true }
tauri-specta = { workspace = true }

[dependencies]
tauri = { workspace = true }
tauri-plugin-notification = "2"
ralph-workflow = { path = "../ralph-workflow", features = ["monitoring", "hardened-resume"] }
serde = { workspace = true }
serde_json = "1.0"
tokio = { workspace = true }
thiserror = "2.0"
anyhow = "1.0"
dirs = "5.0"
git2 = { workspace = true }
uuid = { version = "1.10", features = ["v4"] }
chrono = "0.4"
regex = "1.10"
toml = "0.8"
ureq = { version = "2", features = ["json"] }
which = "6"
specta = { workspace = true }
tauri-specta = { workspace = true }
specta-typescript = { workspace = true }

axum = { version = "0.7", features = ["macros"], optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }

[features]
default = []
e2e-server = ["dep:axum", "dep:tower-http"]

[dev-dependencies]
tempfile = { workspace = true }
tauri = { version = "2", features = ["test"] }

[lints.rust]
warnings = "deny"
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
# tauri::State<'_, T> must be passed by value for Tauri's dependency injection;
# this is a Tauri framework requirement that cannot use &State.
needless_pass_by_value = "allow"
# No explicit iterator loops when a more idiomatic form exists
explicit_iter_loop = "deny"
explicit_into_iter_loop = "deny"
# No implicit crashes / partial operations
unwrap_used = "deny"
# expect_used is allowed - parent() returning Some is guaranteed for config paths
panic = "deny"
panic_in_result_fn = "deny"
# indexing_slicing is allowed - accessing JSON fields with indexing is idiomatic and safe
# in this context where we control the data structure
# No casual side effects / debugging leftovers
print_stdout = "deny"
# print_stderr is allowed for error reporting in GUI application
dbg_macro = "deny"
# Treat unchecked arithmetic as suspicious
# arithmetic_side_effects is allowed - counter increments are safe in this context
# Push toward combinators instead of hand-written control flow
manual_map = "deny"
manual_filter = "deny"
manual_find = "deny"
manual_filter_map = "deny"
manual_flatten = "deny"
needless_collect = "deny"
