[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "ralph-workflow"
dynamic = ["version"]
description = "Python CLI for unattended multi-agent AI development workflows"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [
    {name = "Ralph Workflow maintainers"}
]
keywords = ["ai", "agent", "orchestration", "pipeline", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "rich-click>=1.8",
    "pydantic>=2.7",
    "httpx>=0.27",
    "jinja2>=3.1",
    "loguru>=0.7",
    "tqdm>=4.66",
    "watchdog>=4.0",
    "gitpython>=3.1",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "hatch",
    "ruff",
    "mypy",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pydantic[mypy]>=2.7",
]
bundle = [
    "pyinstaller>=6.0",
]

[project.scripts]
ralph = "ralph.cli.main:app"

[project.urls]
Homepage = "https://codeberg.org/RalphWorkflow/Ralph-Workflow"
Documentation = "https://codeberg.org/RalphWorkflow/Ralph-Workflow/src/branch/main/ralph-python/README.md"
Repository = "https://codeberg.org/RalphWorkflow/Ralph-Workflow"
Issues = "https://codeberg.org/RalphWorkflow/Ralph-Workflow/issues"

[tool.hatch.version]
source = "code"
path = "ralph/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["ralph"]

[tool.hatch.build.targets.sdist]
include = [
    "/ralph",
    "/README.md",
    "/LICENSE",
]

[tool.hatch.envs.publish]
dependencies = ["hatch"]

[tool.hatch.publish.index]
url = "https://upload.pypi.org/legacy/"
auth = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "C4", "SIM", "RUF", "TCH", "PTH", "PERF", "PL"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]
"ralph/__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
strict = true
python_version = "3.12"
plugins = ["pydantic.mypy"]

[tool.coverage.run]
source = ["ralph"]
branch = true
data_file = ".coverage.pytest"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
