[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "ralph-workflow"
dynamic = ["version"]
description = "Ralph Workflow is an opinionated AI agent orchestration framework."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-or-later" }
license-files = ["LICENSE"]
authors = [{ name = "Mistlight" }]
keywords = ["ai", "agent", "orchestration", "pipeline", "multi-agent"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "typer>=0.12",
  "rich>=13.0",
  "rich-click>=1.8",
  "mcp>=1.27.0",
  "pydantic>=2.7",
  "httpx>=0.27",
  "jinja2>=3.1",
  "loguru>=0.7",
  "tqdm>=4.66",
  "watchdog>=4.0",
  "gitpython>=3.1",
  "ddgs>=9.14.0",
  "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
  "hatch",
  "ruff",
  "mypy",
  "types-psutil>=5.9",
  "hypothesis>=6.100",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.0",
  "pytest-xdist>=3.6",
  "pydantic>=2.7",
  "vulture>=2.16",
  "readability-lxml>=0.8.1",
  "selectolax>=0.3.21",
]
web-search = [
  "tavily-python>=0.7.23",
  "exa-py>=2.12.0",
  "brave-search-python-client>=0.4.27",
]
web-visit = [
  "readability-lxml>=0.8.1",
  "selectolax>=0.3.21",
]
docs = [
  "sphinx>=7",
  "furo>=2024.8.6",
  "myst-parser",
  "linkify-it-py>=2",
  "sphinx-copybutton>=0.5",
  "sphinx-design>=0.5",
]
bundle = ["pyinstaller>=6.0"]

[project.scripts]
ralph = "ralph.cli.main:app"
ralph-mcp = "ralph.mcp.server.runtime:main"

[project.urls]
Homepage = "https://codeberg.org/RalphWorkflow/Ralph-Workflow"
Documentation = "https://codeberg.org/RalphWorkflow/Ralph-Workflow/src/branch/main/ralph-workflow/README.md"
Repository = "https://codeberg.org/RalphWorkflow/Ralph-Workflow"
Issues = "https://codeberg.org/RalphWorkflow/Ralph-Workflow/issues"

[tool.hatch.version]
source = "code"
path = "ralph/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["ralph"]
include = [
  "ralph/prompts/templates/**/*.jinja",
  "ralph/policy/defaults/*.toml",
  "ralph/mcp/artifacts/format_docs/*.md",
]

[tool.hatch.build.targets.sdist]
include = [
  "/ralph",
  "/README.md",
  "/LICENSE",
  "/ralph/prompts/templates/**/*.jinja",
  "/ralph/mcp/artifacts/format_docs/*.md",
]

[tool.hatch.envs.publish]
dependencies = ["hatch"]

[tool.hatch.publish.index]
url = "https://upload.pypi.org/legacy/"
auth = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "W",
  "I",
  "N",
  "UP",
  "ANN",
  "B",
  "C4",
  "SIM",
  "RUF",
  "TCH",
  "PTH",
  "PERF",
  "PL",
  "PGH",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]
"ralph/__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.vulture]
paths = ["ralph", "tests"]
min_confidence = 100
sort_by_size = true

[tool.mypy]
strict = true
python_version = "3.12"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["ddgs", "ddgs.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["readability", "readability.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["selectolax", "selectolax.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["ralph"]
branch = true
data_file = ".coverage.pytest"

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "types-psutil",
    "hypothesis>=6.100",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.6",
    "ruff>=0.1",
]
