[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "ralph-workflow"
dynamic = ["version"]
description = "An autonomous coding-agent orchestrator: hand off a well-specified task and return to reviewable, tested work."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-or-later" }
license-files = ["LICENSE"]
authors = [{ name = "Mistlight" }]
maintainers = [{ name = "Mistlight" }]
keywords = ["ai", "agent", "orchestration", "coding"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Natural Language :: English",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Environment :: Console",
  "Operating System :: POSIX",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
]
dependencies = [
  "typer>=0.12",
  "rich>=13.0",
  "rich-click>=1.8",
  "questionary>=2.0",
  "mcp>=1.27.0",
  "packaging>=23.0",
  "pydantic>=2.7",
  "httpx>=0.27",
  "jinja2>=3.1",
  "loguru>=0.7",
  "tqdm>=4.66",
  "watchdog>=4.0",
  "gitpython>=3.1",
  "ddgs>=9.14.0",
  "readability-lxml>=0.8.1",
  "selectolax>=0.3.21",
  "psutil>=5.9",
  "sentry-sdk>=2.0",
]

[project.optional-dependencies]
dev = [
  "hatch",
  "ruff",
  "mypy",
  "pathspec>=1.0.4",
  "types-psutil>=5.9",
  "hypothesis>=6.100",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.0",
  "pytest-xdist>=3.6",
  "pydantic>=2.7",
  "vulture>=2.16",
  "readability-lxml>=0.8.1",
  "selectolax>=0.3.21",
]
web-search = [
  "tavily-python>=0.7.23",
  "exa-py>=2.12.0",
  "brave-search-python-client>=0.4.27",
]
docs = [
  "sphinx>=7",
  "myst-parser",
  "linkify-it-py>=2",
  "sphinx-copybutton>=0.5",
  "sphinx-design>=0.5",
]
bundle = ["pyinstaller>=6.0"]

[project.scripts]
ralph = "ralph.cli.main:app"
ralph-mcp = "ralph.mcp.server.runtime:main"
ralph-prompt = "ralph.cli._prompt_helper_entry:main"

[project.urls]
Homepage = "https://ralphworkflow.com"
Documentation = "https://ralphworkflow.com/docs"
Repository = "https://codeberg.org/RalphWorkflow/Ralph-Workflow"
Issues = "https://codeberg.org/RalphWorkflow/Ralph-Workflow/issues/new"
Community = "https://codeberg.org/RalphWorkflow/Ralph-Workflow/issues"
"GitHub Mirror" = "https://github.com/Ralph-Workflow/Ralph-Workflow"
Changelog = "https://codeberg.org/RalphWorkflow/Ralph-Workflow/src/branch/main/ralph-workflow/CHANGELOG.md"

[tool.hatch.version]
source = "code"
path = "ralph/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["ralph"]
include = [
  "ralph/prompts/templates/**/*.jinja",
  "ralph/policy/defaults/*.toml",
  "ralph/mcp/artifacts/format_docs/*.md",
  "ralph/skills/content/**/*.md",
  "ralph/project_policy/starters/**/*.md",
]

[tool.hatch.build.targets.sdist]
include = [
  "/ralph",
  "/README.md",
  "/LICENSE",
  "/ralph/prompts/templates/**/*.jinja",
  "/ralph/mcp/artifacts/format_docs/*.md",
  "/ralph/skills/content/**/*.md",
  "/ralph/project_policy/starters/**/*.md",
]

[tool.hatch.envs.publish]
dependencies = ["hatch"]

[tool.hatch.publish.index]
url = "https://upload.pypi.org/legacy/"
auth = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "W",
  "I",
  "N",
  "UP",
  "ANN",
  "B",
  "C4",
  "SIM",
  "RUF",
  "TCH",
  "PTH",
  "PERF",
  "PL",
  "PGH",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "PLR2004",  # Magic values in tests are acceptable
    "TC003",   # Tests legitimately use Path() at runtime for fixture construction (tmp_path / "...") and literal-path assertions; cannot be TYPE_CHECKING only.
    "ANN001",  # Test fixtures and helper closures take a few positional-only kwargs without full annotation; the behaviour is covered by the assertion on the helper's return.
    "ANN201",  # Test helpers' return types are not needed; assertions pin the expected shape.
    "ANN202",  # Private test helpers (in-memory workspaces, decoders) are small and are covered by the public test asserts; full annotations add noise without safety.
    "ANN204",  # Test ``__str__`` / ``__repr__`` helpers are documented inline.
    "ANN401",  # Tests sometimes use ``Any`` for fixture dict shapes; the asserting code (not the fixture) is the contract.
    "E501",   # Test fixtures commonly embed real tool output (script text, error messages) and the line length signal is not informative.
    "PLC0415",  # Tests build seam objects that lazily import the production module to keep the test runtime cheap and avoid a global reload.
]
"ralph/cli/**/*.py" = ["PLC0415"]  # Lazy imports avoid circular dependencies in CLI
"ralph/config/**/*.py" = ["PLC0415"]  # Lazy imports avoid circular dependencies in config package
"ralph/display/**/*.py" = ["PLC0415"]  # Lazy imports avoid circular dependencies in display package
# Indexed MCP handlers (grep / search / read / read_multiple) grow with
# eligibility/fallback/evidence-id plumbing and the explore substrate has
# single-writer accumulator marker lines (bounded-accumulator-ok on the
# same physical line as the assignment); keeping 100-char lines everywhere
# forces ugly splits that hide the marker. The audit_lint_bypass allowlist
# documents the rationale (accumulator / resource-lifecycle markers).
"ralph/**/*.py" = ["E501"]  # bounded-accumulator-ok / resource-lifecycle-ok markers on assignment lines (audit_lint_bypass allowlist documents the rationale)
"ralph/mcp/explore/**/*.py" = [
    "PLC0415",  # Lazy imports avoid the explore <-> workspace import cycle at module load time.
    "PLR0911",  # The reindex pipeline has many short returns to keep the per-path control flow local; readability beats branch-count minimisation here.
    "PLR0912",  # Same as PLR0911 for the dirty-path and lifecycle modules.
    "PLR0915",  # The single-writer coalescing path in ReindexWriter.claim spans ~25 statements by design.
    "RUF012",  # The class-level ``_active`` dict is the single-writer registry; making it instance-level would lose cross-instance coalescing, which is the contract.
    "TC003",  # The explore package uses ``collections.abc`` and ``pathlib`` runtime-evaluated type aliases (used inside ``Protocol`` definitions and runtime checkers); moving them to TYPE_CHECKING would split the type-only path from the runtime path that ``isinstance`` checks depend on.
]
"ralph/mcp/tools/workspace/**/*.py" = [
    "PLC0415",  # The explore index handle is read lazily from the session/workspace seam to avoid an import cycle between the workspace handlers and ``ralph.mcp.explore``.
    "TC003",   # The explore index handle is read lazily from the session/workspace seam; workspace utils import the MCP coordination helpers, which makes collections.abc/Path imports runtime-only.
    "PLR0911",  # Indexed arguments add 6-12 short returns per handler (eligibility, fallback, hash precondition). The live path is preserved; the extra returns are pre-conditions that fan out cleanly.
    "PLR0912",  # Same as PLR0911 for branches; the indexed handler has more decision points but each branch is a short-circuit.
    "PLR0915",  # The grep handler's statements grew with the eligibility/fallback/evidence-id plumbing; the per-branch control flow stays local.
]
"ralph/pipeline/**/*.py" = [
    "PLC0415",  # The dev/fix session lifecycle hook lazily imports the explore lifecycle module to avoid pulling the substrate into every pipeline module's import graph.
]
"ralph/phases/**/*.py" = [
    "PLC0415",  # The ralph.phases.__init__ module breaks the ralph.phases -> ralph.pipeline -> ralph.config -> ralph.policy -> ralph.policy.loader -> ralph.phases cycle by deferring the phase-module imports and PhaseContext lazy attribute lookup to call time; without PLC0415 the audit would force the cycle back into ralph.phases at module load time.
]

[tool.ruff.lint.pylint]
# CLI entry-point functions (e.g., typer commands) necessarily have one parameter per flag.
# The ruff default of 5 is too low for production CLI functions.
# main() in cli/main.py has ~33 parameters representing CLI flags.
max-args = 40
# main() in cli/main.py is a single typer callback that fans out to ~12 early-exit
# branches (--init, --regenerate-config, --force-init-skills, --diagnose, --check-mcp,
# --check-config, --init-local-config, --inspect-checkpoint, --list-agents,
# --list-providers, --generate-commit*, --prompt-helper) plus the main pipeline
# invocation. The ruff default of 50 statements / 12 branches is too low for this
# entry point. The 60 / 14 caps here still keep main() under the auditor's per-step
# complexity review (PLR0911/PLR0912) and the auditor's allowlist of acceptable
# noqa codes does not need to be widened.
max-statements = 60
max-branches = 14



[tool.ruff.lint.isort]
known-first-party = ["ralph", "tests"]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel", "ralph.pydantic_compat.RalphBaseModel"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.vulture]
paths = ["ralph", "tests"]
min_confidence = 100
sort_by_size = true
ignore_names = [
    "html_partial",
    "separator",
    "from_attributes",
    "by_alias",
    "by_name",
    "raise_errors",
    "deep",
    "strict",
    "extra",
    "context",
    "mode",
    "exclude_unset",
    "exclude_defaults",
    "exclude_none",
    "round_trip",
    "warnings",
    "force",
    "indent",
    "ensure_ascii",
    "update",
    # Pytest fixture parameters used implicitly by name (the fixture is
    # auto-injected by pytest, not by explicit passing).
    "broker_secret_in_parent",
    "patched_waiting_strategy",
]


[tool.coverage.run]
source = ["ralph"]
data_file = ".coverage.pytest"
omit = ["ralph/testing/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "pathspec>=1.0.4",
    "types-psutil",
    "hypothesis>=6.100",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.6",
    "ruff>=0.1",
    "types-tqdm>=4.67.3.20260518",
]
