[package]
name = "ralph-workflow-tests"
version = "0.1.0"
edition = "2021"
publish = false

# Split into 3 targets for parallel compilation and faster incremental rebuilds.
# Each target is a separate Cargo compilation unit — editing a test in one
# target does NOT recompile the other two.
[[test]]
name = "integration_tests_reducer"
path = "integration_tests_reducer/main.rs"

[[test]]
name = "integration_tests_workflow"
path = "integration_tests_workflow/main.rs"

[[test]]
name = "integration_tests_agent_core"
path = "integration_tests_agent_core/main.rs"

[[test]]
name = "system_tests"
path = "system_tests/main.rs"

[[test]]
name = "process-system-tests"
path = "process_system_tests/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
ralph-workflow = { path = "../ralph-workflow", features = ["test-utils"] }
ralph-workflow-policy = { path = "../ralph-workflow-policy" }
mcp-server = { path = "../mcp-server" }
serde_json = { workspace = true }
test-helpers = { path = "../test-helpers" }
tempfile = { workspace = true }
predicates = "3"
git2 = { workspace = true }
sha2 = { workspace = true }
regex = { workspace = true }
serial_test = { workspace = true }
chrono = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[lints.clippy]
all = "deny"
explicit_iter_loop = "deny"
explicit_into_iter_loop = "deny"
dbg_macro = "deny"
manual_map = "deny"
manual_filter = "deny"
manual_find = "deny"
manual_filter_map = "deny"
manual_flatten = "deny"
needless_collect = "deny"
