[package]
name = "ralph_lints"
version = "0.1.0"
edition = "2024"
publish = false
description = "Custom dylint lints for Ralph - enforcing functional programming principles and boundary-based I/O separation"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
dylint_linting = "5.0"

[dev-dependencies]
dylint_testing = "5.0"

[package.metadata.rust-analyzer]
rustc_private = true
